--- a/src/multimodal/OneRecognizer/Icar.form
+++ b/src/multimodal/OneRecognizer/Icar.form
@@ -87,6 +87,9 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="cc" red="ff" type="rgb"/>
                 </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI Light" size="24" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Geste reconnu"/>
               </Properties>
               <AccessibilityProperties>
